--- a/build.gradle
+++ b/build.gradle
@@ -24,3 +24,11 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "mklkun_CardGameMVC"
+        property "sonar.organization", "mklkun"
+        property "sonar.host.url", "https://sonarcloud.io"
+    }
+}
