--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id "org.sonarqube" version "3.5.0.2730"
+    id "jacoco"
 }
 
 group 'org.example'
@@ -30,5 +31,11 @@ sonarqube {
         property "sonar.projectKey", "mklkun_CardGameMVC"
         property "sonar.organization", "mklkun"
         property "sonar.host.url", "https://sonarcloud.io"
+    }
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
     }
 }
