--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,11 @@ repositories {
     mavenCentral()
 }
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
+}
+
 dependencies {
     implementation group: 'org.slf4j', name: 'slf4j-log4j12', version: '2.0.6'
     implementation group: 'org.assertj', name: 'assertj-core', version: '3.24.2'
@@ -37,6 +42,7 @@ sonarqube {
 
 jacocoTestReport {
     reports {
-        xml.enabled true
+        xml.required = true
+        html.required = true
     }
 }
